// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox honors the \`disabled\` prop 1`] = `
<div>
  <div
    class="checkbox-wrapper-field1 cf-form-checkboxes"
  >
    <div
      class="cf-form-checkbox"
    >
      <input
        aria-label="field1"
        disabled=""
        id="field1"
        name="field1"
        type="checkbox"
      />
      <label
        for="field1"
      >
        <span
          class=""
        >
          field1
        </span>
         
      </label>
    </div>
  </div>
</div>
`;

exports[`Checkbox honors the \`required\` prop 1`] = `
<div>
  <div
    class="checkbox-wrapper-field1 cf-form-checkboxes"
  >
    <div
      class="cf-form-checkbox"
    >
      <input
        aria-label="field1"
        id="field1"
        name="field1"
        type="checkbox"
      />
      <label
        for="field1"
      >
        <span
          class=""
        >
          field1
        </span>
         
        <span
          class="cf-required"
        >
          Required
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`Checkbox renders correctly 1`] = `
<div>
  <div
    class="checkbox-wrapper-field1 cf-form-checkboxes"
  >
    <div
      class="cf-form-checkbox"
    >
      <input
        aria-label="field1"
        id="field1"
        name="field1"
        type="checkbox"
      />
      <label
        for="field1"
      >
        <span
          class=""
        >
          field1
        </span>
         
      </label>
    </div>
  </div>
</div>
`;
